Details
-
Bug
-
Resolution: Done
-
P1: Critical
-
Qt Creator 2.8.0-beta
-
None
-
MSVC2012, Windows 64bit
-
5dbcb974b02e788f9c213a917105a4e6b6593281
Description
Console:
Assertion failed: r != 0, file ..\3rdparty\cplusplus\Templates.cpp, line 402 Assertion failed: r != 0, file ..\3rdparty\cplusplus\Templates.cpp, line 402 Assertion failed: r != 0, file ..\3rdparty\cplusplus\Templates.cpp, line 402 LEAK: 457 Structure QObject::killTimers: timers cannot be stopped from another thread
Locals
this @0x2e246273d0 CPlusPlus::TypeOfExpression * m_thisDocument class QSharedPointer<> QSharedPointer<CPlusPlus::Document> m_snapshot class CPlusPlus::Snapshot CPlusPlus::Snapshot m_bindings class QSharedPointer<> QSharedPointer<CPlusPlus::CreateBindings> m_ast @0xfeeefeeefeeefeee CPlusPlus::ExpressionAST * m_scope 0x0 CPlusPlus::Scope * m_lookupContext class CPlusPlus::LookupContext CPlusPlus::LookupContext m_environment class QSharedPointer<> QSharedPointer<CPlusPlus::Environment> m_expandTemplates true bool m_documents class QList<> QList<QSharedPointer<CPlusPlus::Document>> resolve class CPlusPlus::ResolveExpression CPlusPlus::ResolveExpression scope @0x2e1f3af438 CPlusPlus::Scope * document @0x2e1f3af608 References: 5/5 QSharedPointer<CPlusPlus::Document> * value @0x2e26f26420 CPlusPlus::Document * _fileName "<completion>" QString _control @0x2e241d87c0 CPlusPlus::Control * _translationUnit @0x2e26dbbb50 CPlusPlus::TranslationUnit * _globalNamespace @0x2e26f573b0 CPlusPlus::Namespace * _diagnosticMessages <0 items> QList<CPlusPlus::Document::DiagnosticMessage> _includes <0 items> QList<CPlusPlus::Document::Include> _definedMacros <0 items> QList<CPlusPlus::Macro> _skippedBlocks <0 items> QList<CPlusPlus::Document::Block> _macroUses <0 items> QList<CPlusPlus::Document::MacroUse> _undefinedMacroUses <0 items> QList<CPlusPlus::Document::UndefinedMacroUse> _includeGuardMacroName @0x738ec9a8 "" QByteArray _source "# 1 "<expression>"\nbuttonsLine->addWidget" QByteArray [0] 35 '#' unsigned char [1] 32 ' ' unsigned char [2] 49 '1' unsigned char [3] 32 ' ' unsigned char [4] 34 '"' unsigned char [5] 60 '<' unsigned char [6] 101 'e' unsigned char [7] 120 'x' unsigned char [8] 112 'p' unsigned char [9] 114 'r' unsigned char [10] 101 'e' unsigned char [11] 115 's' unsigned char [12] 115 's' unsigned char [13] 105 'i' unsigned char [14] 111 'o' unsigned char [15] 110 'n' unsigned char [16] 62 '>' unsigned char [17] 34 '"' unsigned char [18] 10 '\n' unsigned char [19] 98 'b' unsigned char [20] 117 'u' unsigned char [21] 116 't' unsigned char [22] 116 't' unsigned char [23] 111 'o' unsigned char [24] 110 'n' unsigned char [25] 115 's' unsigned char [26] 76 'L' unsigned char [27] 105 'i' unsigned char [28] 110 'n' unsigned char [29] 101 'e' unsigned char [30] 45 '-' unsigned char [31] 62 '>' unsigned char [32] 97 'a' unsigned char [33] 100 'd' unsigned char [34] 100 'd' unsigned char [35] 87 'W' unsigned char [36] 105 'i' unsigned char [37] 100 'd' unsigned char [38] 103 'g' unsigned char [39] 101 'e' unsigned char [40] 116 't' unsigned char _lastModified <null> QDateTime _keepSourceAndASTCount 0 QAtomicInt _revision 0 unsigned int _editorRevision 0 unsigned int _checkMode 1 unsigned char expression @0x2e26ce93a0 CPlusPlus::ExpressionAST *
Stack:
0 CPlusPlus::Argument::Argument Symbols.cpp 149 0x7f983d74155 1 CPlusPlus::CloneSymbol::visit Templates.cpp 225 0x7f983d90181 2 CPlusPlus::Symbol::visitSymbol Symbol.cpp 139 0x7f983d73764 3 CPlusPlus::CloneSymbol::cloneSymbol Templates.cpp 185 0x7f983d8d52e 4 CPlusPlus::Scope::Scope Scope.cpp 239 0x7f983d60a8e 5 CPlusPlus::Function::Function Symbols.cpp 202 0x7f983d749f1 6 CPlusPlus::CloneSymbol::visit Templates.cpp 257 0x7f983d90501 7 CPlusPlus::Function::visitSymbol0 Symbols.cpp 384 0x7f983d7b60f 8 CPlusPlus::Symbol::visitSymbol Symbol.cpp 139 0x7f983d73764 9 CPlusPlus::CloneSymbol::cloneSymbol Templates.cpp 185 0x7f983d8d52e 10 CPlusPlus::Scope::Scope Scope.cpp 239 0x7f983d60a8e 11 CPlusPlus::Class::Class Symbols.cpp 690 0x7f983d743d5 12 CPlusPlus::CloneSymbol::visit Templates.cpp 281 0x7f983d90301 13 CPlusPlus::Class::visitSymbol0 Symbols.cpp 751 0x7f983d7b43c 14 CPlusPlus::Symbol::visitSymbol Symbol.cpp 139 0x7f983d73764 15 CPlusPlus::CloneSymbol::cloneSymbol Templates.cpp 185 0x7f983d8d52e 16 CPlusPlus::ClassOrNamespace::NestedClassInstantiator::instantiate LookupContext.cpp 1108 0x7f983dd5a94 17 CPlusPlus::ClassOrNamespace::NestedClassInstantiator::instantiate LookupContext.cpp 1117 0x7f983dd5aff 18 CPlusPlus::ClassOrNamespace::NestedClassInstantiator::instantiate LookupContext.cpp 1117 0x7f983dd5aff 19 CPlusPlus::ClassOrNamespace::NestedClassInstantiator::instantiate LookupContext.cpp 1117 0x7f983dd5aff 20 CPlusPlus::ClassOrNamespace::NestedClassInstantiator::instantiate LookupContext.cpp 1117 0x7f983dd5aff 21 CPlusPlus::ClassOrNamespace::nestedType LookupContext.cpp 975 0x7f983ddb66c 22 CPlusPlus::ClassOrNamespace::lookupType_helper LookupContext.cpp 729 0x7f983dd8c57 23 CPlusPlus::ClassOrNamespace::lookupType LookupContext.cpp 668 0x7f983dd8152 24 CPlusPlus::CreateBindings::visit LookupContext.cpp 1448 0x7f983dddd5d 25 CPlusPlus::Symbol::visitSymbol Symbol.cpp 139 0x7f983d73764 26 CPlusPlus::ClassOrNamespace::flush LookupContext.cpp 1178 0x7f983dd43f6 27 CPlusPlus::ClassOrNamespace::symbols LookupContext.cpp 485 0x7f983ddd77d 28 CPlusPlus::ClassOrNamespace::nestedType LookupContext.cpp 833 0x7f983dda977 29 CPlusPlus::ClassOrNamespace::findOrCreateType LookupContext.cpp 1221 0x7f983dd3b21 30 CPlusPlus::CreateBindings::visit LookupContext.cpp 1397 0x7f983dde173 31 CPlusPlus::Symbol::visitSymbol Symbol.cpp 139 0x7f983d73764 32 CPlusPlus::CreateBindings::visit LookupContext.cpp 1352 0x7f983dde801 33 CPlusPlus::Template::visitSymbol0 Symbols.cpp 546 0x7f983d7ba6f 34 CPlusPlus::Symbol::visitSymbol Symbol.cpp 139 0x7f983d73764 35 CPlusPlus::ClassOrNamespace::flush LookupContext.cpp 1178 0x7f983dd43f6 36 CPlusPlus::ClassOrNamespace::symbols LookupContext.cpp 485 0x7f983ddd77d 37 CPlusPlus::ClassOrNamespace::nestedType LookupContext.cpp 886 0x7f983ddaf6e 38 CPlusPlus::ClassOrNamespace::findOrCreateType LookupContext.cpp 1221 0x7f983dd3b21 39 CPlusPlus::CreateBindings::visit LookupContext.cpp 1357 0x7f983dde201 40 CPlusPlus::Namespace::visitSymbol0 Symbols.cpp 601 0x7f983d7b69f 41 CPlusPlus::Symbol::visitSymbol Symbol.cpp 139 0x7f983d73764 42 CPlusPlus::ClassOrNamespace::flush LookupContext.cpp 1178 0x7f983dd43f6 43 CPlusPlus::ClassOrNamespace::lookupType_helper LookupContext.cpp 722 0x7f983dd8aa7 44 CPlusPlus::ClassOrNamespace::lookupType LookupContext.cpp 668 0x7f983dd8152 45 CPlusPlus::CreateBindings::lookupType LookupContext.cpp 1281 0x7f983dd824f 46 CPlusPlus::LookupContext::lookupType LookupContext.cpp 325 0x7f983dd83eb 47 TypedefsResolver::getNamedTypeItems ResolveExpression.cpp 871 0x7f983dbf7f9 48 TypedefsResolver::resolve ResolveExpression.cpp 842 0x7f983dc086b 49 CPlusPlus::ResolveExpression::baseExpression ResolveExpression.cpp 970 0x7f983dbc7b4 50 CPlusPlus::ResolveExpression::visit ResolveExpression.cpp 809 0x7f983dc3d41 51 CPlusPlus::MemberAccessAST::accept0 ASTVisit.cpp 744 0x7f983cd841f 52 CPlusPlus::AST::accept AST.cpp 51 0x7f983ccb6bf 53 CPlusPlus::ResolveExpression::expression ResolveExpression.cpp 117 0x7f983dbea85 54 CPlusPlus::ResolveExpression::resolve ResolveExpression.cpp 105 0x7f983dc0694 55 CPlusPlus::ResolveExpression::operator() ResolveExpression.cpp 92 0x7f983dbb6bb 56 CPlusPlus::TypeOfExpression::operator() TypeOfExpression.cpp 117 0x7f983db48ab 57 CPlusPlus::TypeOfExpression::operator() TypeOfExpression.cpp 86 0x7f983db45fa 58 `anonymous namespace'::CanonicalSymbol::canonicalSymbol cppeditor.cpp 294 0x7f983b5c21b 59 lazyFindReferences cppeditor.cpp 878 0x7f983b510b9 60 QtConcurrent::StoredFunctorCall4<QList<int>,QList<int> (__cdecl*)(CPlusPlus::Scope * __ptr64,QString,QSharedPointer<CPlusPlus::Document>,CPlusPlus::Snapshot),CPlusPlus::Scope * __ptr64,QString,QSharedPointer<CPlusPlus::Document>,CPlusPlus::Snapshot qtconcurrentstoredfunctioncall.h 876 0x7f983b65d95 61 QtConcurrent::RunFunctionTask<QList<int> >::run qtconcurrentrunbase.h 106 0x7f983b65c32 62 QThreadPoolThread::run qthreadpool.cpp 107 0x7341f25a 63 QThreadPrivate::start qthread_win.cpp 348 0x7344261f 64 beginthreadex MSVCR110D 0x7f9863c71a5 65 endthreadex MSVCR110D 0x7f9863c73a7 66 BaseThreadInitThunk KERNEL32 0x7f99ad9167e 67 RtlUserThreadStart ntdll 0x7f99d5c3501