src/libs/3rdparty/cplusplus/Templates.cpp
@@ -408,6 +408,11 @@ void CloneName::visit(const Identifier *name)
     _name = _control->identifier(name->chars(), name->size());
 }
 
+void CloneName::visit(const AnonymousNameId *name)
+{
+    _name = _control->anonymousNameId(name->classTokenIndex());
+}
+
 void CloneName::visit(const TemplateNameId *name)
 {
     std::vector<FullySpecifiedType> args(name->templateArgumentCount());
